name:                jstype
version:             0.1.0.0
synopsis:            A description of the project.
-- description:
license:             MIT
--license-file:      LICENSE
author:              Pete Bevin
maintainer:          pete@petebevin.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.20

executable repl
  hs-source-dirs: src, repl
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base, parsec, text, either, mtl >= 2.2.1, safe, containers, QuickCheck, regex-posix, array, haskeline, pretty
  ghc-options: -j4 -fprof-auto

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base, parsec, text, either, mtl >= 2.2.1, safe, containers, QuickCheck, regex-posix, array, hspec, pretty
  ghc-options: -j4
