name:                jstype
version:             0.1.0.0
synopsis:            A description of the project.
-- description:
license:             MIT
--license-file:      LICENSE
author:              Pete Bevin
maintainer:          pete@petebevin.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.20

library
  hs-source-dirs:      src
  exposed-modules:     Builtins.Array.Concat
                     , Builtins.Array.Reduce
                     , Builtins.Array.Sort
                     , Builtins.Array
                     , Builtins.Boolean
                     , Builtins.Date
                     , Builtins.Math
                     , Builtins.Number
                     , Builtins.ParseFloat
                     , Builtins.ParseInt
                     , Builtins.RegExp
                     , Builtins.String
                     , Builtins.URI
                     , Builtins
                     , Compiler
                     , Core
                     , Eval.Expressions
                     , Eval.Statements
                     , Eval
                     , Expr
                     , JSNum
                     , OpCodes
                     , Parse.Lexical
                     , Parse.Number.Common
                     , Parse.Number.NumericLiteral
                     , Parse.Number.StringNumericLiteral
                     , Parse.Number
                     , Parse.State
                     , Parse.Statements
                     , Parse.Types
                     , Parse
                     , Polyvariadic
                     , Runtime.Arguments
                     , Runtime.Conversion
                     , Runtime.Debug
                     , Runtime.Error
                     , Runtime.Function
                     , Runtime.Global
                     , Runtime.NumberToString
                     , Runtime.Object
                     , Runtime.ObjectBuilder
                     , Runtime.Operations
                     , Runtime.PropDesc
                     , Runtime.PropertyDescriptor
                     , Runtime.PropMap
                     , Runtime.Prototype
                     , Runtime.Reference
                     , Runtime.Shared
                     , Runtime.Types
                     , Runtime
                     , Unicode
  build-depends:       base >= 4.7 && < 5
                       , parsec
                       , text
                       , deepseq
                       , mtl >= 2.2.1
                       , safe
                       , lens
                       , containers
                       , QuickCheck
                       , regex-posix
                       , array
                       , pretty
  default-language:    Haskell2010

  ghc-prof-options:    -O2
                       -threaded
                       -fprof-auto
                       "-with-rtsopts=-N -p -s -h -i0.1"

  ghc-options:         -O2
                       -j6

executable jstype-repl
  hs-source-dirs:      repl
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , haskeline
                     , mtl
                     , text
                     , jstype
  default-language:    Haskell2010

executable jstype-benchmark
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , deepseq
                     , text
                     , jstype
  default-language:    Haskell2010

test-suite jstype-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.1.8
                     , QuickCheck
                     , lens
                     , text
                     , parsec
                     , mtl
                     , jstype
